# acumenauto

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  __extract_docx.py  docker-compose.yml  fly.toml  manage.py  pyproject.toml
acumenauto/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/: admin.py  email_utils.py  forms.py  models.py  scraper.py  tasks.py  urls.py  views.py
app/management/commands/: download_report.py
app/migrations/: 0001_initial.py  0002_initial_schedule.py  0003_create_admin_user.py  0004_run_filenames.py  0005_recipient.py  0006_run_filenames_textfield.py  0007_app_config.py  0008_appconfig_report_flags.py  0009_split_daily_weekly_schedule.py  0010_long_report_daily.py  0011_rename_date_range_chunks.py
templates/: base.html  dashboard.html  login.html  password_change.html  password_change_done.html  run_detail.html  settings.html
