[tool.poetry]
name = "acumenauto"
version = "0.1.0"
description = ""
authors = ["ebaneo <ebaneo_89@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.4"
psycopg = {extras = ["binary"], version = "^3.3.3"}
dj-database-url = "^3.1.2"
playwright = "^1.58.0"
brevo-python = "^1.1.2"
celery = "^5.5.0"
redis = "^5.2.0"
django-celery-beat = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
